--- a/ChangeLog
+++ b/ChangeLog
@@ -228,6 +228,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * t³o pod animowanymi obrazkami jest ju¿ odpowiedniego koloru (joi)
 * przywrócone zapisywanie nowych kontaktów [#333], usuniêty martwy
   sygna³ UserList::userAdded i slot Kadu::userlistUserAdded (adrian)
+* obs³uga blokowania przez serwer wiadomo¶ci oraz zape³nienia skrzynki przy
+  w³±czonej opcji "Potwierdzenie wys³ania wiadomo¶ci (czekaj na dostarczenie)" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
