--- a/ChangeLog
+++ b/ChangeLog
@@ -231,6 +231,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga blokowania przez serwer wiadomo¶ci oraz zape³nienia skrzynki przy
   w³±czonej opcji "Potwierdzenie wys³ania wiadomo¶ci (czekaj na dostarczenie)" (joi)
 * ³apanie do linków '(' ')' (joi)
+* separatory paragrafów w oknie chat i historii (adrian, joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
