--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-eTeksty w nawiasach na koñcu wpisu mówi± o tym, kto dokona³ poprawki
+Teksty w nawiasach na koñcu wpisu mówi± o tym, kto dokona³ poprawki
 lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
@@ -232,6 +232,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w³±czonej opcji "Potwierdzenie wys³ania wiadomo¶ci (czekaj na dostarczenie)" (joi)
 * ³apanie do linków '(' ')' (joi)
 * separatory paragrafów w oknie chat i historii (adrian, joi)
+* usuniêta opcja "Wymu¶ u¿ycie paragrafów", a dodana "U¿ywaj paragrafów
+  zamiast tabelek" (wbrew pozorom jest ró¿nica) + drobny tuning ;) paragrafów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
