--- a/ChangeLog
+++ b/ChangeLog
@@ -234,6 +234,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * separatory paragrafów w oknie chat i historii (adrian, joi)
 * usuniêta opcja "Wymu¶ u¿ycie paragrafów", a dodana "U¿ywaj paragrafów
   zamiast tabelek" (wbrew pozorom jest ró¿nica) + drobny tuning ;) paragrafów (joi)
+* ³ata Vogela na problemy z ³±czeniem i zrywaniem po³±czenia (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
