--- a/ChangeLog
+++ b/ChangeLog
@@ -235,6 +235,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêta opcja "Wymu¶ u¿ycie paragrafów", a dodana "U¿ywaj paragrafów
   zamiast tabelek" (wbrew pozorom jest ró¿nica) + drobny tuning ;) paragrafów (joi)
 * ³ata Vogela na problemy z ³±czeniem i zrywaniem po³±czenia (joi)
+* paragrafy s± ju¿ prawie nieodró¿nialne od tabelek (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
