--- a/ChangeLog
+++ b/ChangeLog
@@ -236,6 +236,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zamiast tabelek" (wbrew pozorom jest ró¿nica) + drobny tuning ;) paragrafów (joi)
 * ³ata Vogela na problemy z ³±czeniem i zrywaniem po³±czenia (joi)
 * paragrafy s± ju¿ prawie nieodró¿nialne od tabelek (joi)
+* usuniêty segfault w encryption (próba wys³ania klucza przy braku po³±czenia) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
