--- a/ChangeLog
+++ b/ChangeLog
@@ -239,6 +239,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty segfault w encryption (próba wys³ania klucza przy braku po³±czenia) (joi)
 * ³ata Vogela: wy³±czanie checkboksa "Niedostêpny dla kontaktu" w informacjach
   o kontakcie przy wy³±czonym statusie "Tylko dla znajomych" (joi)
+* dymki nie pojawiaj± siê poza ekranem gdy panel jest ukryty (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
