--- a/ChangeLog
+++ b/ChangeLog
@@ -240,6 +240,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³ata Vogela: wy³±czanie checkboksa "Niedostêpny dla kontaktu" w informacjach
   o kontakcie przy wy³±czonym statusie "Tylko dla znajomych" (joi)
 * dymki nie pojawiaj± siê poza ekranem gdy panel jest ukryty (joi)
+* dymki z informacjami o zmianach statusów domy¶lnie nie otwieraj± okna chat
+  (mo¿liwo¶æ w³±czenia w konfiguracji) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
