opcja ignorowania zmian statusów online->online, itp. (domyślnie włączona)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2724 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -242,6 +242,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dymki nie pojawiaj± siê poza ekranem gdy panel jest ukryty (joi)
 * dymki z informacjami o zmianach statusów domy¶lnie nie otwieraj± okna chat
   (mo¿liwo¶æ w³±czenia w konfiguracji) (joi)
+* opcja ignorowania zmian statusów dostêpny->dostêpny, itp. (domy¶lnie w³±czona) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
