--- a/ChangeLog
+++ b/ChangeLog
@@ -243,6 +243,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dymki z informacjami o zmianach statusów domy¶lnie nie otwieraj± okna chat
   (mo¿liwo¶æ w³±czenia w konfiguracji) (joi)
 * opcja ignorowania zmian statusów dostêpny->dostêpny, itp. (domy¶lnie w³±czona) (joi)
+* poprawki w module config_wizard - wy³adowuje siê ju¿ prawid³owo (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
