--- a/ChangeLog
+++ b/ChangeLog
@@ -246,6 +246,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki w module config_wizard - wy³adowuje siê ju¿ prawid³owo (adrian)
 * dodany modu³ ext_info do autodownloadu (adrian)
 * encryption: usuniêty segfault przy odbiorze klucza (joi)
+* paragrafy: nowa wersja separatorów + wycinanie emotikon przy wy³±czonej animacji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
