--- a/ChangeLog
+++ b/ChangeLog
@@ -247,6 +247,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany modu³ ext_info do autodownloadu (adrian)
 * encryption: usuniêty segfault przy odbiorze klucza (joi)
 * paragrafy: nowa wersja separatorów + wycinanie emotikon przy wy³±czonej animacji (joi)
+* paragrafy: lepsze pozycjonowanie animowanych emotikon/obrazków (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
