--- a/ChangeLog
+++ b/ChangeLog
@@ -249,6 +249,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * paragrafy: nowa wersja separatorów + wycinanie emotikon przy wy³±czonej animacji (joi)
 * paragrafy: lepsze pozycjonowanie animowanych emotikon/obrazków (joi)
 * przy eksporcie listy kontaktów na serwer polskie znaki nie s± usuwane (joi)
+* autoaway: ³ata Dorregaraya + porz±dki + poprawki dla linuksa 2.6 (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
