--- a/HISTORY
+++ b/HISTORY
@@ -3,7 +3,7 @@ jako ma³a wprawka do programowania
 w KDE, na bazie libgg.so Wojtka Kaniewskiego.
 Z czasem program przekszta³ci³ siê
 w jeden z najpopularniejszych klientów
-GG dla Linuxa...
+GG dla Linuksa...
 
 Pocz±wszy od wersji 0.3.3 Kadu
 nie wymaga ju¿ bibliotek KDE
