--- a/ChangeLog
+++ b/ChangeLog
@@ -250,6 +250,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * paragrafy: lepsze pozycjonowanie animowanych emotikon/obrazków (joi)
 * przy eksporcie listy kontaktów na serwer polskie znaki nie s± usuwane (joi)
 * autoaway: ³ata Dorregaraya + porz±dki + poprawki dla linuksa 2.6 (joi)
+* escape znowu zamyka okno konfiguracji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
