--- a/ChangeLog
+++ b/ChangeLog
@@ -251,6 +251,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy eksporcie listy kontaktów na serwer polskie znaki nie s± usuwane (joi)
 * autoaway: ³ata Dorregaraya + porz±dki + poprawki dla linuksa 2.6 (joi)
 * escape znowu zamyka okno konfiguracji (joi)
+* przy w³±czonej podczas konfiguracji ¼róde³ opcji --enable-debug w trakcie
+  dzia³ania programu mo¿na zmieniæ w konfiguracji warto¶æ DEBUG_MASK +
+  mo¿liwo¶æ wy³±czenia obs³ugi sygna³ów systemowych poprzez ustawienie
+  zmiennej ¶rodowiskowej SIGNAL_HANDLING na 0 (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
