--- a/ChangeLog
+++ b/ChangeLog
@@ -259,6 +259,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   s± zapamiêtywane (joi)
 * przy przechodzeniu kontaktu ze statusu niedostêpnego na dostêpny lub zaraz wracam
   nie od¶wie¿a³ siê adres ip, port, maksymalny rozmiar obrazka - poprawione (joi)
+* dokowanie dla fvwm-crystal: WM_CLASS="kadudock" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
