segfault przy rozpoczynaniu połączenia DCC gdy nie mamy rozpoczynającego na liście kontaktów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2762 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -262,6 +262,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dokowanie dla fvwm-crystal: WM_CLASS="kadudock" (joi)
 * dodane brakuj±ce ikonki w menu modulu accound_managment config_wizard (Ron_K)
 * poprawka w od¶wierzaniu ikon po zmianie tematu (michal)
+* usuniêty segfault przy próbie nawi±zania po³±czenia DCC je¿eli nie mamy
+  wywo³uj±cego na li¶cie kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
