--- a/ChangeLog
+++ b/ChangeLog
@@ -266,6 +266,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wywo³uj±cego na li¶cie kontaktów (joi)
 * w przypadku braku domy¶lnego zestawu ikon kadu prze³±cza siê na pierwszy
   dostêpny zestaw (joi)
+* debug: dodana funkcja kdebugmf o identycznej sk³adni co kdebugm, ale wypisuj±ca
+  dodatkowo nazwê funkcji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
