ikony w dockmenu poprawnie się odświeżają
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2777 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -268,6 +268,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   dostêpny zestaw (joi)
 * debug: dodana funkcja kdebugmf o identycznej sk³adni co kdebugm, ale wypisuj±ca
   dodatkowo nazwê funkcji (joi)
+* ikony w dockmenu poprawnie od¶wie¿aj± siê przy zmianie zestawu ikon (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
