--- a/ChangeLog
+++ b/ChangeLog
@@ -275,6 +275,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   równie¿ w obs³udze rozmów g³osowych (adrian)
 * przys³ane obrazki zapisuj± siê w historii je¿eli dotr± w ci±gu minuty od
   wys³ania ¿±dania (joi)
+* je¿eli obrazek jest wiêkszy ni¿ nasz limit, to nie prosimy nadawcy o jego
+  przys³anie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
