--- a/ChangeLog
+++ b/ChangeLog
@@ -277,6 +277,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wys³ania ¿±dania (joi)
 * je¿eli obrazek jest wiêkszy ni¿ nasz limit, to nie prosimy nadawcy o jego
   przys³anie (joi)
+* kolejne spore przeróbki w dcc i voice, inaczej nie poprawimy niektórych
+  b³êdów. poproszê o spor± ilo¶æ rozmaitych testów (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
