--- a/ChangeLog
+++ b/ChangeLog
@@ -279,6 +279,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przys³anie (joi)
 * kolejne spore przeróbki w dcc i voice, inaczej nie poprawimy niektórych
   b³êdów. poproszê o spor± ilo¶æ rozmaitych testów (adrian)
+* porz±dki, poprawki przy tworzeniu i niszczeniu dialogów FileTransferDialog
+  i VoiceChatDialog (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
