--- a/ChangeLog
+++ b/ChangeLog
@@ -281,6 +281,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   b³êdów. poproszê o spor± ilo¶æ rozmaitych testów (adrian)
 * porz±dki, poprawki przy tworzeniu i niszczeniu dialogów FileTransferDialog
   i VoiceChatDialog (adrian)
+* okno chat je¿eli jest zminimalizowane, to przy dwukliku na li¶cie kontaktów
+  siê odminimalizuje ;) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
