--- a/ChangeLog
+++ b/ChangeLog
@@ -283,6 +283,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i VoiceChatDialog (adrian)
 * okno chat je¿eli jest zminimalizowane, to przy dwukliku na li¶cie kontaktów
   siê odminimalizuje ;) (joi)
+* libgadu: b³êdnie liczone sumy kontrolne obrazków (joi)
+* libgadu: wysy³anie du¿ych pakietów nie "zawiesza" po³±czenia - obrazki 
+  powinny ju¿ zawsze dochodziæ (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
