dodawanie kontaktu - uwzgl. zakl. inne
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2800 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -286,7 +286,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu: b³êdnie liczone sumy kontrolne obrazków (joi)
 * libgadu: wysy³anie du¿ych pakietów nie "zawiesza" po³±czenia - obrazki 
   powinny ju¿ zawsze dochodziæ (joi)
-* prze³±czanie focusu w oknie chat jednak wy³±czone - czasem powodowa³o to problemy (joi)
+* prze³±czanie focusu w oknie chat jednak wy³±czone - czasem
+  powodowa³o to problemy (joi)
+* podczas dodawania kontaktu brane s± pod uwagê ustawienia
+  w zak³adce "inne" (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
