--- a/ChangeLog
+++ b/ChangeLog
@@ -290,6 +290,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   powodowa³o to problemy (joi)
 * podczas dodawania kontaktu brane s± pod uwagê ustawienia
   w zak³adce "inne" (adrian)
+* usuniêta obs³uga okien chat za pomoc± tabelek - tylko paragrafy (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
