--- a/ChangeLog
+++ b/ChangeLog
@@ -291,6 +291,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * podczas dodawania kontaktu brane s± pod uwagê ustawienia
   w zak³adce "inne" (adrian)
 * usuniêta obs³uga okien chat za pomoc± tabelek - tylko paragrafy (adrian)
+* sendFile(UinType) w FileTransferManager. pomys³ z ³atki googiego (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
