--- a/ChangeLog
+++ b/ChangeLog
@@ -292,6 +292,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w zak³adce "inne" (adrian)
 * usuniêta obs³uga okien chat za pomoc± tabelek - tylko paragrafy (adrian)
 * sendFile(UinType) w FileTransferManager. pomys³ z ³atki googiego (adrian)
+* linki rozpoczynaj±ce siê od "www." poprawnie otwieraj± siê w konquerorze (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
