--- a/ChangeLog
+++ b/ChangeLog
@@ -293,6 +293,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêta obs³uga okien chat za pomoc± tabelek - tylko paragrafy (adrian)
 * sendFile(UinType) w FileTransferManager. pomys³ z ³atki googiego (adrian)
 * linki rozpoczynaj±ce siê od "www." poprawnie otwieraj± siê w konquerorze (joi)
+* ip, port i domena nie kasuj± siê przy uaktualnianiu danych o kontakcie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
