--- a/ChangeLog
+++ b/ChangeLog
@@ -295,6 +295,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * linki rozpoczynaj±ce siê od "www." poprawnie otwieraj± siê w konquerorze (joi)
 * ip, port i domena nie kasuj± siê przy uaktualnianiu danych o kontakcie (joi)
 * dodane 2 domy¶lne serwery GG (joi)
+* ³atka dorregaray'a - potwierdzenie czyszczenia okna rozmowy [#344] i
+  otwieranie okna historii gdy nie mamy zaznaczonych kontaktów [#342] (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
