--- a/ChangeLog
+++ b/ChangeLog
@@ -297,6 +297,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodane 2 domy¶lne serwery GG (joi)
 * ³atka dorregaray'a - potwierdzenie czyszczenia okna rozmowy [#344] i
   otwieranie okna historii gdy nie mamy zaznaczonych kontaktów [#342] (adrian)
+* poprawione znikanie dymków przy Qt 3.0.x (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
