--- a/ChangeLog
+++ b/ChangeLog
@@ -301,6 +301,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ustawienia kolorów tekstu w oknie chat równie¿ w historii [#340] (adrian)
 * upgrade libgadu: niektóre poprawki joi'a mieli¶my ju¿ wcze¶niej, ale
   dodatkowo poprawki pobierania tokenów i obs³ugi proxy (adrian)
+* zmienna SystemMsgIndex by³a ³adowana z sekcji Global, a powinna by³a byæ ³adowana
+  z sekcji General (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
