--- a/ChangeLog
+++ b/ChangeLog
@@ -303,6 +303,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   dodatkowo poprawki pobierania tokenów i obs³ugi proxy (adrian)
 * zmienna SystemMsgIndex by³a ³adowana z sekcji Global, a powinna by³a byæ ³adowana
   z sekcji General (chilek)
+* je¶li wiadomo¶æ pochodzi od u¿ytkownika z uinem równym 0 (wiadomo¶æ systemowa)
+  ignorujemy sprawdzanie czy jest to u¿ytkownik anonimowy itd. (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
