--- a/ChangeLog
+++ b/ChangeLog
@@ -305,6 +305,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z sekcji General (chilek)
 * je¶li wiadomo¶æ pochodzi od u¿ytkownika z uinem równym 0 (wiadomo¶æ systemowa)
   ignorujemy sprawdzanie czy jest to u¿ytkownik anonimowy itd. (chilek)
+* domy¶lny indeks ostatnio odczytanej wiadomo¶ci systemowej ustawiony na 1389
+  (zgodnie z GG 6.0 build 147) (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
