--- a/ChangeLog
+++ b/ChangeLog
@@ -307,6 +307,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ignorujemy sprawdzanie czy jest to u¿ytkownik anonimowy itd. (chilek)
 * domy¶lny indeks ostatnio odczytanej wiadomo¶ci systemowej ustawiony na 1389
   (zgodnie z GG 6.0 build 147) (chilek)
+* usuniêty segfault po usuniêciu kontaktu z listy (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
