--- a/ChangeLog
+++ b/ChangeLog
@@ -311,6 +311,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty niewielki wyciek pamiêci w EmoticonSelectorze (joi)
 * przy konfiguracji wizardem poprawnie tworz± siê katalogi profilu (joi)
 * poprawka segfaulta przy zerwaniu polaczenia i ponownym laczeniu (pawel_p)
+* aktualizacje sprawdzamy nie czê¶ciej ni¿ co godzinê (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
