--- a/AUTHORS
+++ b/AUTHORS
@@ -8,8 +8,6 @@ programista, opiekun serwera kadu.net, koordynator
 Adrian Smarzewski <adrian (at) kadu (dot) net>
 programista, koordynator
 
-Dariusz Jagodzik <mast3r (at) kadu (dot) net>
-programista
 
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
 dokumentacja projektu, opiekun t³umaczeñ
@@ -23,8 +21,16 @@ programista
 Micha³ Podsiadlik <michal (at) kadu (dot) net>
 programista
 
+
+Ludzie którzy nie wspieraj± ju¿ aktywnie projektu:
+============================================================
+
 Tomasz Jarzynka <tomee (at) cpi (dot) pl>
 twórca projektu, programista, grafik
+
+Dariusz Jagodzik <mast3r (at) kadu (dot) net>
+programista
+
 
  Lokalizacje Kadu
 =============================================================
