--- a/ChangeLog
+++ b/ChangeLog
@@ -312,6 +312,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy konfiguracji wizardem poprawnie tworz± siê katalogi profilu (joi)
 * poprawka segfaulta przy zerwaniu polaczenia i ponownym laczeniu (pawel_p)
 * aktualizacje sprawdzamy nie czê¶ciej ni¿ co godzinê (chilek)
+* StartDelay w kadu.conf (w sekcji General) pozwala na opó¼nienie w uruchomieniu
+  programu, mo¿e to byæ przydatne w GNOME przy odtwarzaniu sesji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
