--- a/ChangeLog
+++ b/ChangeLog
@@ -314,6 +314,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * aktualizacje sprawdzamy nie czê¶ciej ni¿ co godzinê (chilek)
 * StartDelay w kadu.conf (w sekcji General) pozwala na opó¼nienie w uruchomieniu
   programu, mo¿e to byæ przydatne w GNOME przy odtwarzaniu sesji (joi)
+* config_wizard: ³ata Dorregaraya - wybór modu³u d¼wiêkowego,
+  czyszczenie kodu, czê¶æ pierwsza (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
