--- a/ChangeLog
+++ b/ChangeLog
@@ -316,6 +316,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   programu, mo¿e to byæ przydatne w GNOME przy odtwarzaniu sesji (joi)
 * config_wizard: ³ata Dorregaraya - wybór modu³u d¼wiêkowego,
   czyszczenie kodu, czê¶æ pierwsza (joi)
+* poprawiona kompatybilno¶æ z Qt 3.0 (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
