--- a/ChangeLog
+++ b/ChangeLog
@@ -319,6 +319,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiona kompatybilno¶æ z Qt 3.0 (joi)
 * dodana mo¿liwo¶æ ignorowania obrazków gdy jeste¶my ukryci 
   + wspó³praca z modu³em "spy" (joi)
+* ³ata mig21 + drobne poprawki: je¿eli w ci±gu kilku sekund (domy¶lnie 2) od przyj¶cia
+  wiadomo¶ci spróbujemy zamkn±æ okno chatu, to kadu zapyta siê o potwierdzenie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
