--- a/ChangeLog
+++ b/ChangeLog
@@ -324,6 +324,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * istotne poprawki przy instalowaniu katalogu "data" modu³ów [#353] (adrian)
 * przy pierwszym uruchomieniu dcc ¶cie¿ki do domy¶lnych katalogów s±
   poprawnie ustawiane (joi)
+* drobne optymalizacje w wy¶wietlaniu opisów pod kontaktami (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
