--- a/ChangeLog
+++ b/ChangeLog
@@ -325,6 +325,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy pierwszym uruchomieniu dcc ¶cie¿ki do domy¶lnych katalogów s±
   poprawnie ustawiane (joi)
 * drobne optymalizacje w wy¶wietlaniu opisów pod kontaktami (joi)
+* optymalizacje formatowania wiadomo¶ci w chacie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
