--- a/ChangeLog
+++ b/ChangeLog
@@ -326,6 +326,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   poprawnie ustawiane (joi)
 * drobne optymalizacje w wy¶wietlaniu opisów pod kontaktami (joi)
 * optymalizacje formatowania wiadomo¶ci w chacie (joi)
+* poprawione kopiowanie tekstu z chatu do schowka przy zaznaczeniu myszk± (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
