--- a/ChangeLog
+++ b/ChangeLog
@@ -327,6 +327,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne optymalizacje w wy¶wietlaniu opisów pod kontaktami (joi)
 * optymalizacje formatowania wiadomo¶ci w chacie (joi)
 * poprawione kopiowanie tekstu z chatu do schowka przy zaznaczeniu myszk± (joi)
+* zmodyfikowana sk³adnia panelu informacyjnego dla zestawu RonK2 
+  (problemy na systemach, gdzie kodowanie by³o inne ni¿ latin2) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
