--- a/ChangeLog
+++ b/ChangeLog
@@ -330,6 +330,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmodyfikowana sk³adnia panelu informacyjnego dla zestawu RonK2 
   (problemy na systemach, gdzie kodowanie by³o inne ni¿ latin2) (joi)
 * usuwany z grupy kontakt nie jest z powrotem dodawany do bie¿±cego userboksa (joi)
+* encryption: je¿eli nie uda siê zakodowaæ wiadomo¶ci, to wy¶wietlany jest
+  odpowiedni komunikat (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
