--- a/ChangeLog
+++ b/ChangeLog
@@ -332,6 +332,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuwany z grupy kontakt nie jest z powrotem dodawany do bie¿±cego userboksa (joi)
 * encryption: je¿eli nie uda siê zakodowaæ wiadomo¶ci, to wy¶wietlany jest
   odpowiedni komunikat (joi)
+* uproszczenia i poprawki w mechani¼mie ³±czenia z serwerami: wyrzucona stara
+  zmienna Autohammer, ca³a klasa AutoconnectTimer, niestety cofniêta ostatnia
+  poprawka paw³a_p - powodowa³a inwazjê hintów przy braku sieci ;) (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
