--- a/ChangeLog
+++ b/ChangeLog
@@ -335,6 +335,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * uproszczenia i poprawki w mechani¼mie ³±czenia z serwerami: wyrzucona stara
   zmienna Autohammer, ca³a klasa AutoconnectTimer, niestety cofniêta ostatnia
   poprawka paw³a_p - powodowa³a inwazjê hintów przy braku sieci ;) (adrian)
+* przy wy³±czonych zak³adkach grup kadu poprawnie dodaje nowe kontakty do listy (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
