--- a/ChangeLog
+++ b/ChangeLog
@@ -337,6 +337,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   poprawka paw³a_p - powodowa³a inwazjê hintów przy braku sieci ;) (adrian)
 * przy wy³±czonych zak³adkach grup kadu poprawnie dodaje nowe kontakty do listy (joi)
 * usuniête freeze'y w czasie konferencji (joi)
+* usuniêty segfault przy dwukliku na li¶cie kontaktów przy nowej wiadomo¶ci (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
