--- a/ChangeLog
+++ b/ChangeLog
@@ -339,6 +339,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniête freeze'y w czasie konferencji (joi)
 * usuniêty segfault przy dwukliku na li¶cie kontaktów przy nowej wiadomo¶ci (joi)
 * dodany do autodownloadu modu³ dcopexport (joi)
+* poprawne otwieranie linków z % (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
