sms ląduje w historii tylko gdy bramka nie zwróciła błędu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2881 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -340,6 +340,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty segfault przy dwukliku na li¶cie kontaktów przy nowej wiadomo¶ci (joi)
 * dodany do autodownloadu modu³ dcopexport (joi)
 * poprawne otwieranie linków z % (joi)
+* sms l±duje w historii tylko gdy bramka nie zwróci³a b³êdu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
