--- a/ChangeLog
+++ b/ChangeLog
@@ -249,7 +249,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * paragrafy: nowa wersja separatorów + wycinanie emotikon przy wy³±czonej animacji (joi)
 * paragrafy: lepsze pozycjonowanie animowanych emotikon/obrazków (joi)
 * przy eksporcie listy kontaktów na serwer polskie znaki nie s± usuwane (joi)
-* autoaway: ³ata Dorregaraya + porz±dki + poprawki dla linuksa 2.6 (joi)
+* autoaway: ³ata Dorregaraya + porz±dki + poprawki dla Linuksa 2.6 (joi)
 * escape znowu zamyka okno konfiguracji (joi)
 * przy w³±czonej podczas konfiguracji ¼róde³ opcji --enable-debug w trakcie
   dzia³ania programu mo¿na zmieniæ w konfiguracji warto¶æ DEBUG_MASK +
@@ -341,6 +341,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ dcopexport (joi)
 * poprawne otwieranie linków z % (joi)
 * sms l±duje w historii tylko gdy bramka nie zwróci³a b³êdu (joi)
+* mo¿liwo¶æ ³±czenia okien chatów we Fluxboksie - WM_CLASS=kadu-chat (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
