--- a/ChangeLog
+++ b/ChangeLog
@@ -343,6 +343,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * sms l±duje w historii tylko gdy bramka nie zwróci³a b³êdu (joi)
 * mo¿liwo¶æ ³±czenia okien chatów we Fluxboksie - WM_CLASS=kadu-chat (joi)
 * zmiana statusu na niedostêpny prawid³owo przerywa proces ³±czenia (adrian)
+* przy statusie "tylko dla znajomych" gdy kto¶ obcy siê do nas odezwie,
+  to nie ujawniamy mu naszego statusu (joi)
+* bezproblemowa aktualizacja uinu kontaktu je¿eli mamy go na li¶cie anonimowych (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
