--- a/ChangeLog
+++ b/ChangeLog
@@ -346,6 +346,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy statusie "tylko dla znajomych" gdy kto¶ obcy siê do nas odezwie,
   to nie ujawniamy mu naszego statusu (joi)
 * bezproblemowa aktualizacja uinu kontaktu je¿eli mamy go na li¶cie anonimowych (joi)
+* ignorujemy zmiany statusów dla anonimowych kontaktów, z którymi rozmawiali¶my (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
