--- a/ChangeLog
+++ b/ChangeLog
@@ -347,6 +347,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   to nie ujawniamy mu naszego statusu (joi)
 * bezproblemowa aktualizacja uinu kontaktu je¿eli mamy go na li¶cie anonimowych (joi)
 * ignorujemy zmiany statusów dla anonimowych kontaktów, z którymi rozmawiali¶my (joi)
+* poprawki, uproszczenia przy zarz±dzaniu zewnêtrznym ip w dcc (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
