błędy gdy nick/nazwa modułu/nazwa pliku zawiera %1/%2/..
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2890 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -348,6 +348,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * bezproblemowa aktualizacja uinu kontaktu je¿eli mamy go na li¶cie anonimowych (joi)
 * ignorujemy zmiany statusów dla anonimowych kontaktów, z którymi rozmawiali¶my (joi)
 * poprawki, uproszczenia przy zarz±dzaniu zewnêtrznym ip w dcc (adrian)
+* usuniête b³êdy wystêpuj±ce w wielu miejscach kadu gdy np. nick osoby zawiera "%1" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
