wyciek pamięci w ConfigDialogu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2899 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -349,7 +349,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ignorujemy zmiany statusów dla anonimowych kontaktów, z którymi rozmawiali¶my (joi)
 * poprawki, uproszczenia przy zarz±dzaniu zewnêtrznym ip w dcc (adrian)
 * usuniête b³êdy wystêpuj±ce w wielu miejscach kadu gdy np. nick osoby zawiera "%1" (joi)
-* usuniêty ogromny wyciek pamiêci z modu³u dsp_sound (joi)
+* usuniêty wyciek pamiêci z modu³u dsp_sound (joi)
+* usuniêty wyciek pamiêci z okna konfiguracji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
