--- a/ChangeLog
+++ b/ChangeLog
@@ -351,6 +351,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniête b³êdy wystêpuj±ce w wielu miejscach kadu gdy np. nick osoby zawiera "%1" (joi)
 * usuniêty wyciek pamiêci z modu³u dsp_sound (joi)
 * usuniêty wyciek pamiêci z okna konfiguracji (joi)
+* api do obs³ugi nagrywania i odtwarzania próbek w module sound (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
