--- a/ChangeLog
+++ b/ChangeLog
@@ -358,6 +358,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu: drobne wycieki w specyficznych warunkach (joi)
 * poprawione przesy³anie plików przy przekierowaniu portów (joi)
 * opcja testowania odtwarzania próbek przez nowe api w konfiguracji (adrian)
+* w module notify "nowe" zdarzenie - u¿ytkownik zmieni³ status na niewidoczny (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
