--- a/ChangeLog
+++ b/ChangeLog
@@ -359,6 +359,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione przesy³anie plików przy przekierowaniu portów (joi)
 * opcja testowania odtwarzania próbek przez nowe api w konfiguracji (adrian)
 * w module notify "nowe" zdarzenie - u¿ytkownik zmieni³ status na niewidoczny (joi)
+* usuniêty kolejny wyciek pamiêci - tym razem MessageBox (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
