--- a/ChangeLog
+++ b/ChangeLog
@@ -360,6 +360,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opcja testowania odtwarzania próbek przez nowe api w konfiguracji (adrian)
 * w module notify "nowe" zdarzenie - u¿ytkownik zmieni³ status na niewidoczny (joi)
 * usuniêty kolejny wyciek pamiêci - tym razem MessageBox (joi)
+* poprawiony b³±d w formatowaniu wiadomo¶ci (objawia³ siê przy obrazkach) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
