--- a/ChangeLog
+++ b/ChangeLog
@@ -362,6 +362,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty kolejny wyciek pamiêci - tym razem MessageBox (joi)
 * poprawiony b³±d w formatowaniu wiadomo¶ci (objawia³ siê przy obrazkach) (joi)
 * porz±dki w dcc/voice - rozpoczynanie po³±czenia tylko w jednym miejscu (joi)
+* dcc: ostrze¿enie gdy kto¶ próbuje rozpocz±æ z nami bezpo¶rednie po³±czenie,
+  a adres ¼ród³owy nie zgadza siê adresem, który otrzymali¶my od serwera
+  + ignorowanie po³±czeñ bezpo¶rednich od anonimów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
