--- a/ChangeLog
+++ b/ChangeLog
@@ -369,6 +369,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ignorowanych do pliku (joi)
 * dcc: porz±dki, usuniêty b³±d powoduj±cy przes³anie serwerowi b³êdnego numeru portu (joi)
 * dcc + libgadu: poprawne przesy³anie nazw plików zawieraj±cych polskie znaki (joi)
+* dcc: gdy druga strona, mimo posiadania publicznego ip, nie chce z nami nawi±zaæ
+  po³±czenia, to prosimy j± o po³±czenie zwrotne (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
