--- a/ChangeLog
+++ b/ChangeLog
@@ -371,6 +371,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc + libgadu: poprawne przesy³anie nazw plików zawieraj±cych polskie znaki (joi)
 * dcc: gdy druga strona, mimo posiadania publicznego ip, nie chce z nami nawi±zaæ
   po³±czenia, to prosimy j± o po³±czenie zwrotne (joi)
+* dcc: zrobiony ³adny interfejs do przesy³ania plików (np. dla dcopexport) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
