--- a/ChangeLog
+++ b/ChangeLog
@@ -375,6 +375,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dsp_sound: odtwarzanie ró¿nych formatów d¼wiêków oraz regulacja g³o¶no¶ci
   uwaga: od dzisiaj do kompilacji modu³u sound wymagana jest biblioteka libsndfile (joi)
 * dodany do autodownloadu modu³ alsa_sound (joi)
+* hinty: ikonki statusów znowu siê pokazuj± (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
