--- a/ChangeLog
+++ b/ChangeLog
@@ -376,6 +376,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   uwaga: od dzisiaj do kompilacji modu³u sound wymagana jest biblioteka libsndfile (joi)
 * dodany do autodownloadu modu³ alsa_sound (joi)
 * hinty: ikonki statusów znowu siê pokazuj± (joi)
+* opcja testowania nagrywania próbek przez nowe api w konfiguracji (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
