--- a/ChangeLog
+++ b/ChangeLog
@@ -379,6 +379,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opcja testowania nagrywania próbek przez nowe api w konfiguracji (adrian)
 * rozmowy g³osowe u¿ywaj± nowego api nagrywania/odtwarzania próbek (adrian)
 * t³a pod animowanymi obrazkami ustawiaj± siê poprawnie (joi)
+* obs³uga w±tkowanego odtwarzania w nowym api próbek (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
