--- a/ChangeLog
+++ b/ChangeLog
@@ -380,6 +380,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * rozmowy g³osowe u¿ywaj± nowego api nagrywania/odtwarzania próbek (adrian)
 * t³a pod animowanymi obrazkami ustawiaj± siê poprawnie (joi)
 * obs³uga w±tkowanego odtwarzania w nowym api próbek (adrian)
+* obs³uga w±tkowanego nagrywania w nowym api próbek (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
