--- a/ChangeLog
+++ b/ChangeLog
@@ -381,6 +381,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * t³a pod animowanymi obrazkami ustawiaj± siê poprawnie (joi)
 * obs³uga w±tkowanego odtwarzania w nowym api próbek (adrian)
 * obs³uga w±tkowanego nagrywania w nowym api próbek (adrian)
+* testy odtwarzania i nagrywania u¿ywaj± w±tkowania (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
