--- a/ChangeLog
+++ b/ChangeLog
@@ -383,6 +383,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga w±tkowanego nagrywania w nowym api próbek (adrian)
 * testy odtwarzania i nagrywania u¿ywaj± w±tkowania (adrian)
 * test fulldupleksu i kosmetyka w pozosta³ych testach (adrian)
+* lista kontaktów z gg 6.1 importuje sie poprawnie (michal)
+
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
