--- a/ChangeLog
+++ b/ChangeLog
@@ -384,6 +384,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * testy odtwarzania i nagrywania u¿ywaj± w±tkowania (adrian)
 * test fulldupleksu i kosmetyka w pozosta³ych testach (adrian)
 * lista kontaktów z gg 6.1 importuje sie poprawnie (michal)
+* mo¿liwo¶æ zmiany koloru t³a/okna edycji w oknie chat-u (michal)
 
 
 +++ wersja 0.3.9 (01.07.2004)
