--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-* TODO, stan na 02/08/2004.
 * TODO nie bêdzie ju¿ aktualizowane pod wzglêdem nowo¶ci
-  wszystkie propozycje bêda umieszczane w Mantis'ie - http://www.kadu.net/mantis/
+  wszystkie propozycje bêd± umieszczane w Mantis'ie - http://www.kadu.net/mantis/
