--- a/ChangeLog
+++ b/ChangeLog
@@ -386,6 +386,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * lista kontaktów z gg 6.1 importuje sie poprawnie (michal)
 * mo¿liwo¶æ zmiany koloru t³a/okna edycji w oknie chat-u (michal)
 * test kodowania/dekodowania gsm w module rozmów g³osowych (adrian)
+* mo¿liwo¶æ w³±czenia trybu odtwarzania próbek zapewniaj±cego bardziej
+  "p³ynne" ich ³±czenie - metoda setFlushingEnabled() (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
