pole hasło w konfiguracji proxy wygwiazdkowane
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2984 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -397,6 +397,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   do tego przyciskami, po co utrudniaæ sobie ¿ycie ;) (adrian)
 * Patch Dorr-a na segfault w desktop_docking (Ron_K)
 * kolejna ³atka Dorregaraya dotycz±ca modu³u config_wizard (adrian)
+* pole "Has³o" w konfiguracji proxy jest wygwiazdkowane (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
