możliwość ustawienia koloru jakim pisany jest opis na liście kontaktów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3045 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -435,6 +435,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * po zaimportowaniu listy kontaktów, "poprawnie" wysy³amy listê osób, których
   statusy chcemy ogl±daæ - obej¶cie b³êdu w serwerze gg (joi)
 * szybsze otwarcie okna po klikniêciu na ikonê dokuj±c± (joi)
+* dodana mo¿liwo¶æ ustawienia koloru jakim pisany jest opis na li¶cie kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
